@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.10 2007-12-28 19:08:44 debug Exp $
+#  $Id: Makefile.skel,v 1.11 2007-12-29 16:18:51 debug Exp $
 #
 #  Makefile for GXemul src/main
 #
@@ -7,7 +7,8 @@
 CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE1)
 LIBS=$(XLIB) $(OTHERLIBS)
 
-OBJS=Action.o ActionStack.o Checksum.o Component.o \
+OBJS=Action.o ActionStack.o Checksum.o \
+	CommandInterpreter.o Component.o \
 	debug_new.o EscapedString.o GXemul.o \
 	StateVariable.o StateVariableValue.o UnitTest.o
 
