@@ -1,4 +1,4 @@
-$Id: HISTORY,v 1.1670 2007-12-28 19:08:43 debug Exp $
+$Id: HISTORY,v 1.1671 2007-12-29 16:18:51 debug Exp $
 
 Changelog for GXemul:
 ---------------------
@@ -3757,3 +3757,4 @@ Changelog for GXemul:
 		Adding a simple EscapedString helper class, for generating and
 		decoding C-style escaped strings.
 		Simple deserialization works. :)
+20071229	Beginning on the CommandInterpreter class.
